Upgrade Linux code to JDK 20